--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
 		"symfony/monolog-bundle": "~2.4",
 		"sensio/distribution-bundle": "~2.2"
 	},
+	"require-dev": {
+		"sensio/generator-bundle": "~2.2"
+	},
 	"scripts": {
 		"post-install-cmd": [
 			"Sensio\\Bundle\\DistrubtionBundle\\Composer\\ScriptHandler::buildBootstrap",
